--- a/index.html
+++ b/index.html
@@ -1,68 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script defer src="src/app.js"></script>
     <title>Quiz App</title>
-  </head>
+</head>
 
-  <body>
+<body>
+    <nav>
+        <ul class="navbar">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
+    </nav>
     <main>
-      <div class="box">
-        <div class="progress-container">
-          <div class="progress-bar"></div>
-        </div>
+        <div class="box">
+            <div class="progress-container">
+                <div class="progress-bar"></div>
+            </div>
 
-        <h1 class="Ques">Q1) What is Your Name?</h1>
-        <div class="row">
-          <input
-            type="radio"
-            class="options"
-            id="option1"
-            value="a"
-            name="ques"
-          />
-          <label for="option1">a) Moazam</label>
-        </div>
-        <div class="row">
-          <input
-            type="radio"
-            class="options"
-            id="option2"
-            value="b"
-            name="ques"
-          />
-          <label for="option2">b) Ali</label>
-        </div>
-        <div class="row">
-          <input
-            type="radio"
-            class="options"
-            id="option3"
-            value="c"
-            name="ques"
-          />
-          <label for="option3">c) Usman</label>
-        </div>
+            <h1 class="Ques">Q1) What is Your Name?</h1>
+            <div class="row">
+                <input type="radio" class="options" id="option1" value="a" name="ques" />
+                <label for="option1" class="option-label">a) Moazam</label>
+            </div>
+            <div class="row">
+                <input type="radio" class="options" id="option2" value="b" name="ques" />
+                <label for="option2" class="option-label">b) Ali</label>
+            </div>
+            <div class="row">
+                <input type="radio" class="options" id="option3" value="c" name="ques" />
+                <label for="option3" class="option-label">c) Usman</label>
+            </div>
+            <div class="row">
+                <input type="radio" class="options" id="option4" value="d" name="ques" />
+                <label for="option4" class="option-label">d) Ammar</label>
+            </div>
 
-        <div class="row">
-          <input
-            type="radio"
-            class="options"
-            id="option4"
-            value="d"
-            name="ques"
-          />
-          <label for="option4">d) Ammar</label>
-      <div class="row">
-        <button class="btn submit">Submit</button>
-        <button class="btn2 submit2">Prev</button>
-      </div>
-     
-      <p class="copyRight">&#169; Syed Moazam Ali. All Rights Reserved.</p>
+            <div class="row">
+                <button class="btn submit">Submit</button>
+                <button class="btn2 submit2">Prev</button>
+            </div>
+        </div>
     </main>
-  </body>
+    <footer>
+        <p>&copy; Syed Moazam Ali. All Rights Reserved.</p>
+    </footer>
+</body>
 </html>
